--- a/password-registry/src/main/resources/com/example/password/password-registry-view.fxml
+++ b/password-registry/src/main/resources/com/example/password/password-registry-view.fxml
@@ -2,15 +2,23 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="318.0" prefWidth="254.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.password.PasswordRegistryController" stylesheets="@Registry.css">
+<VBox alignment="CENTER" prefHeight="318.0" prefWidth="254.0" spacing="20.0" stylesheets="@Registry.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.password.PasswordRegistryController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="New user registry" />
-   <GridPane prefHeight="125.0" prefWidth="214.0">
+    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="New user registry" />
+    <StackPane>
+         <ImageView fx:id="logo" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@logo.png" />
+            </image>
+         </ImageView>
+      </StackPane>
+    <GridPane prefHeight="125.0" prefWidth="214.0">
      <columnConstraints>
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
